# fmp_agent

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  docker-compose.example.yml  main.py  pyproject.toml  requirements.txt  run_api.py
src/: api.py  gapi.py  gemini_workflow.py  models.py  workflow.py
src/templates/: document_extraction_reviewer.j2  extract_all_from_document.j2  extract_clinical_cases.j2  extract_document_clinical_case.j2  extract_document_pages_data.j2  extract_document_text.j2  extract_page_numbers.j2  extract_page_questions.j2  extract_page_text.j2  extract_questions_using_numbers.j2  questions_markdown_formatter.j2  remove_clinical_cases_from_page_text.j2  review_page_text.j2  review_questions_numbers.j2  suggest_page_fixes.j2
src/utils/: agent.py  pdf.py
